add legal_assistance page
- add legal_assistance page
- minor fixes

--- a/about.html
+++ b/about.html
@@ -161,7 +161,10 @@
                 Наш акционер — ведущая российская финансово-промышленная Группа Синара.
               </div>
               <div class="reliable-hands-block">
-                <div class="reliable-hands-block-item item1">
+                <div class="reliable-hands-block-item">
+                  <div class="reliable-hands-image">
+                    <img src="img/features_img1.svg" alt="">
+                  </div>
                   <div class="reliable-hands-block-item-title">
                     Один интернет-банк <br>
                     для бизнеса и личных финансов
@@ -173,7 +176,10 @@
                     дополнительных логинов и паролей.
                   </div>
                 </div>
-                <div class="reliable-hands-block-item item2">
+                <div class="reliable-hands-block-item">
+                  <div class="reliable-hands-image">
+                    <img src="img/features_img2.svg" alt="">
+                  </div>
                   <div class="reliable-hands-block-item-title">
                     Единая точка входа <br>
                     для нескольких продуктов
@@ -184,7 +190,10 @@
                     подключаются через интернет и работают мгновенно.
                   </div>
                 </div>
-                <div class="reliable-hands-block-item item3">
+                <div class="reliable-hands-block-item">
+                  <div class="reliable-hands-image">
+                    <img src="img/features_img3.svg" alt="">
+                  </div>
                   <div class="reliable-hands-block-item-title">
                     Все услуги доступны в онлайне <br>
                     без похода в банк
@@ -196,7 +205,10 @@
                     подпишите договор, чтобы получить доступ к счету.
                   </div>
                 </div>
-                <div class="reliable-hands-block-item item4">
+                <div class="reliable-hands-block-item">
+                  <div class="reliable-hands-image">
+                    <img src="img/features_img4.svg" alt="">
+                  </div>
                   <div class="reliable-hands-block-item-title">
                     Круглосуточная поддержка в чате <br>
                     на сайте, в приложении и по телефону
