--- a/debit-card.html
+++ b/debit-card.html
@@ -257,15 +257,21 @@
               <div class="important-title">Важно знать</div>
               <div class="important-block">
                 <div class="important-block-item">
-                  <div class="important-block-item-title">Вопрос 1</div>
+                  <div class="important-block-item-title">Какой кэшбэк можно получать по этой карте?</div>
                   <div class="important-block-item-desc">
-                    Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции играет важную роль в формировании существенных финансовых и административных условий. С другой стороны укрепление и развитие структуры позволяет оценить значение направлений прогрессивного развития.
+                    В базовом тарифе предусмотреть кэшбэк в размере 0,5% на все покупки. Если подключить опцию, то кэшбэк повышается до 1% и распространяется также на все покупки.
                   </div>
                 </div>
                 <div class="important-block-item">
-                  <div class="important-block-item-title">Вопрос 2</div>
+                  <div class="important-block-item-title">Как подключить дополнительные опции?</div>
                   <div class="important-block-item-desc">
-                    Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции играет важную роль в формировании существенных финансовых и административных условий. С другой стороны укрепление и развитие структуры позволяет оценить значение направлений прогрессивного развития.
+                    Подключить дополнительные опции можно в интернет-банке или в мобильном приложении, по телефону 8 800 5000 700, а также при личном обращении в офис.
+                  </div>
+                </div>
+                <div class="important-block-item">
+                  <div class="important-block-item-title">Сколько стоит подключение дополнительных опций?</div>
+                  <div class="important-block-item-desc">
+                    Подключение опций бесплатное. Пользование стоит 30 руб. в месяц за каждую опцию.
                   </div>
                 </div>
               </div>
