--- a/delokassa.html
+++ b/delokassa.html
@@ -376,11 +376,11 @@
                       <div class="cost-block-item-table-line-value">2,2%</div>
                     </div>
                     <div class="cost-block-item-table-list">
-                      <div class="cost-block-item-table-list-title">Все хлопоты возьмем на себя:</div>
+                      <div class="cost-block-item-table-list-title">Вы самостоятельно:</div>
                       <ul class="list-unstyled">
-                        <li>приобретём ФН и ЭЦП <div class="tooltip"><span>1</span></div></li>
-                        <li>зарегистрируем кассу в ФНС <div class="tooltip"><span>2</span></div></li>
-                        <li>заключим договор с ОФД <div class="tooltip"><span>3</span></div></li>
+                        <li>приобретаете ФН и ЭЦП <div class="tooltip"><span>1</span></div></li>
+                        <li>регистрируете кассу в ФНС <div class="tooltip"><span>2</span></div></li>
+                        <li>заключаете договор с ОФД <div class="tooltip"><span>3</span></div></li>
                       </ul>
                     </div>
                   </div>
