--- a/legal-assistance.html
+++ b/legal-assistance.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Корпоративная карта</title>
+    <title>Помощь юриста</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -118,9 +118,9 @@
         </ul>
       </header>
       <main>
-        <div class="corporate-card-page">
+        <div class="legal-assistance-page">
           <div class="inner">
-            <section class="top-banner pr50">
+            <section class="top-banner">
               <div class="top-banner-content">
                 <ul class="top-banner-content-breadcrumbs list-unstyled">
                   <li class="bx-breadcrumb-item">
@@ -130,17 +130,17 @@
                   </li>
                   <li class="bx-breadcrumb-item">
                     <a href="/">
-                      <span>Для малого бизнеса</span>
+                      <span>Все инструменты для бизнеса</span>
                     </a>
                   </li>
                   <li class="bx-breadcrumb-item">
-                    <span>Корпоративная карта</span>
+                    <span>Помощь юриста</span>
                   </li>
                 </ul>
                 <div class="top-banner-content-text">
-                  <h1 class="top-banner-content-text-title">Корпоративная карта</h1>
+                  <h1 class="top-banner-content-text-title">Помощь юриста</h1>
                   <div class="top-banner-content-text-desc">
-                    Получайте бонусы, оплачивая картой товары и услуги
+                    Помощь в вопросах права и законодательства, подготовка необходимых документов или письменные рекомендации
                   </div>
                   <div class="top-banner-content-text-open">
                     <a href="#">Открыть счет</a>
@@ -149,61 +149,44 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/corporate_card/top_banner_img1.png" title="Корпоративная карта" alt="Корпоративная карта">
+                <img src="img/legal_assistance/top_banner_img1.png" title="Помощь юриста" alt="Помощь юриста">
               </div>
             </section>
             <section class="advantage">
               <div class="advantage-block">
                 <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
+                    <div class="advantage-block-item-text-title">от 30 минут</div>
                     <div class="advantage-block-item-text-desc">
-                      Доставка — в день <br>
-                      открытия счета
+                      На получение ответа
                     </div>
                   </div>
                   <div class="advantage-block-item-image">
-                    <img src="img/adv_img18.png" alt="Доставка — в день открытия счета">
+                    <img src="img/adv_img21.png" alt="Доставка — в день открытия счета">
                   </div>
                 </div>
                 <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
+                    <div class="advantage-block-item-text-title">реальный опыт</div>
                     <div class="advantage-block-item-text-desc">
-                      Комиссия за снятие <br>
-                      в банкоматах до 3%
+                      Решения вопросов
                     </div>
                   </div>
                   <div class="advantage-block-item-image">
-                    <img src="img/adv_img19.png" alt="Комиссия за снятие в банкоматах до 3%">
+                    <img src="img/adv_img22.png" alt="Комиссия за снятие в банкоматах до 3%">
                   </div>
                 </div>
                 <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
+                    <div class="advantage-block-item-text-title">800 ₽</div>
                     <div class="advantage-block-item-text-desc">
-                      Любая безналичная <br>
-                      оплата товаров и услуг
+                      Стоимость за услугу
                     </div>
                   </div>
                   <div class="advantage-block-item-image">
-                    <img src="img/adv_img20.png" alt="Любая безналичная оплата товаров и услуг">
+                    <img src="img/adv_img23.png" alt="Любая безналичная оплата товаров и услуг">
                   </div>
                 </div>
-              </div>
-            </section>
-            <section class="profit-spend">
-              <div class="profit-spend-badge">Бонусы</div>
-              <div class="profit-spend-content">
-                <div class="profit-spend-content-title">Выгодно тратить</div>
-                <ul class="profit-spend-content-list list-unstyled">
-                  <li>Регистрируйте бизнес-карту в программе Mastercard® Business Bonus* и получите 30 приветственных бонусов</li>
-                  <li>Обменивайте бонусы на скидки и специальные предложения от партнеров и снижайте расходы на бизнес.</li>
-                  <li>Подробнее <a href="https://business.mastercard.ru" target="_blank">business.mastercard.ru</a></li>
-                </ul>
-                <div class="profit-spend-content-desc">
-                  *Программа лояльности предоставляется MASTERCARD, все актуальные условия программы размещены на сайте <a href="https://business.mastercard.ru" target="_blank">business.mastercard.ru</a>
-                </div>
-              </div>
-              <div class="profit-spend-image">
-                <img src="img/corporate_card/profit_spend_img1.png" alt="">
               </div>
             </section>
             <section class="steps">
@@ -226,28 +209,27 @@
                 <div class="steps-block-item">
                   <div class="steps-block-item-image">
                     <div class="steps-block-item-image-circle">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="62" viewBox="0 0 63 62" fill="none"><circle cx="31.877" cy="31" r="30.5" fill="white" stroke="#E6E8E0"></circle><rect x="14.5723" y="29.0894" width="34.6091" height="6.4727" rx="3" stroke="#F65E64" stroke-width="2"></rect><circle cx="20.5155" cy="32.3253" r="1.50284" fill="#F65E64"></circle><circle cx="43.2392" cy="32.3253" r="1.50284" fill="#F65E64"></circle><path d="M20.7256 38.9666V42.3925" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M43.4492 38.9666V42.3925" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M43.4488 26.1654L41.841 22.278C41.0677 20.4083 39.2438 19.189 37.2205 19.189H26.5935C24.5702 19.189 22.7464 20.4083 21.9731 22.278L20.3652 26.1654" stroke="#F65E64" stroke-width="2" stroke-linecap="round"></path></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none"><circle cx="31.9902" cy="31.4551" r="30.5" fill="white" stroke="#E6E8E0"></circle><path d="M16.2383 35.8883L21.5459 33.665" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M26.1241 38.877L23.6719 43.7374" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M16 24.707L21.5454 26.8054" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.4326 27.7405L44.3688 25.54" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M36.3391 16.4404L34.0791 21.793" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M23.9697 16.5L26.5271 21.9715" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.8682 41.7949L43.5544 45.8681" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M45.3644 37.1492L29.0674 29.1621L34.4998 46.3098L45.3644 37.1492Z" stroke="#F65E64" stroke-width="2" stroke-linejoin="round"></path></svg>
                     </div>
                     <div class="steps-block-item-image-progress"></div>
                   </div>
                   <div class="steps-block-item-text">
                     <div class="steps-block-item-text-desc">
-                      Сотрудник привезет <br>
-                      корпоративную карту <br>
-                      с договором
+                      В личном кабинете в разделе <br>
+                      «Сервисы» выберите услугу <br>
+                      «Помощь юриста»
                     </div>
                   </div>
                 </div>
                 <div class="steps-block-item">
                   <div class="steps-block-item-image">
                     <div class="steps-block-item-image-circle">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none"><circle cx="31.9902" cy="31.4551" r="30.5" fill="white" stroke="#E6E8E0"></circle><path d="M16.2383 35.8883L21.5459 33.665" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M26.1241 38.877L23.6719 43.7374" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M16 24.707L21.5454 26.8054" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.4326 27.7405L44.3688 25.54" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M36.3391 16.4404L34.0791 21.793" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M23.9697 16.5L26.5271 21.9715" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.8682 41.7949L43.5544 45.8681" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M45.3644 37.1492L29.0674 29.1621L34.4998 46.3098L45.3644 37.1492Z" stroke="#F65E64" stroke-width="2" stroke-linejoin="round"></path></svg>
+                      <svg width="62" height="63" viewBox="0 0 62 63" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="31" cy="31.0146" r="30.5" fill="white" stroke="#E6E8E0"/><path d="M26.5557 48.2227H35.889" stroke="#F65E64" stroke-width="2" stroke-linecap="round"/><path d="M20.333 19.334H27.8886" stroke="#F65E64" stroke-width="2" stroke-linecap="round"/><path d="M33.667 19.334H41.2225" stroke="#F65E64" stroke-width="2" stroke-linecap="round"/><path d="M31 14V16.6667M31 47.7778V30.8889V22" stroke="#F65E64" stroke-width="2" stroke-linecap="round"/><circle cx="30.9997" cy="19.3327" r="2.66667" stroke="#F65E64" stroke-width="2"/><path d="M20.3333 39.7786C23.2789 39.7786 25.6667 37.3908 25.6667 34.4453H15C15 37.3908 17.3878 39.7786 20.3333 39.7786Z" stroke="#F65E64" stroke-width="2"/><path d="M24.7776 34.4442L20.3331 22.8887L15.8887 34.4442" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M41.6663 39.7786C44.6119 39.7786 46.9997 37.3908 46.9997 34.4453H36.333C36.333 37.3908 38.7208 39.7786 41.6663 39.7786Z" stroke="#F65E64" stroke-width="2"/><path d="M46.1115 34.4442L41.6671 22.8887L37.2227 34.4442" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                     </div>
                   </div>
                   <div class="steps-block-item-text">
                     <div class="steps-block-item-text-desc">
-                      Активируйте карту <br>
-                      в личном кабинете
+                      Выберите и закажите услугу
                     </div>
                   </div>
                 </div>
@@ -280,21 +262,15 @@
               <div class="important-title">Важно знать</div>
               <div class="important-block">
                 <div class="important-block-item">
-                  <div class="important-block-item-title">Что нужно сделать для активации корпоративной карты?</div>
+                  <div class="important-block-item-title">Можно получить консультацию юриста без открытия расчетного счета?</div>
                   <div class="important-block-item-desc">
-                    Активация корпоративной карты происходит м интернет-банке  или в мобильном приложении. Нужно зайти на страничку этой карты и нажать кнопку «Активировать».
+                    Открытие расчетного счета является обязательным условиям получения консультации юриста.
                   </div>
                 </div>
                 <div class="important-block-item">
-                  <div class="important-block-item-title">Сколько корпоративных карт можно выпустить?</div>
+                  <div class="important-block-item-title">Как можно получить комментарии по заключению юристов, если возникают вопросы по готовому документу?</div>
                   <div class="important-block-item-desc">
-                    К расчетному счету предусмотрен выпуск одной корпоративной карты.
-                  </div>
-                </div>
-                <div class="important-block-item">
-                  <div class="important-block-item-title">Какие покупки можно оплачивать корпоративной картой, а какие не стоит?</div>
-                  <div class="important-block-item-desc">
-                    Корпоративной картой можно оплачивать любые покупки.
+                    Комментарии по заключению юристов можно получить в интернет-банке на вкладке «Помощь юриста».
                   </div>
                 </div>
               </div>
