add open_api page
- add open_api page
- minor fixes

--- a/debit-card.html
+++ b/debit-card.html
@@ -172,7 +172,7 @@
                     <img src="img/adv_img16.png" alt="Возвращаем на счет">
                   </div>
                 </div>
-                <div class="advantage-block-item nopr">
+                <div class="advantage-block-item nopr fl-end">
                   <div class="advantage-block-item-text">
                     <div class="advantage-block-item-text-title">без комиссии</div>
                     <div class="advantage-block-item-text-desc">Снимайте деньги в банкоматах банков-партнеров</div>
