--- a/delokassa.html
+++ b/delokassa.html
@@ -293,7 +293,7 @@
                   </div>
                   <div class="purpose-block-item-text">
                     <span>Возможности и особенности</span>
-                    Специальная подставка–зарядное устройство с возможностью подключения сканера штрих кодов в комплекте
+                    Разъем для подключения сканера штрих кодов, банковского терминала, весов
                   </div>
                   <div class="purpose-block-item-text">
                     <span>Комплект оборудования</span>
@@ -350,7 +350,7 @@
                   <div class="cost-block-item-line">
                     <div class="cost-block-item-line-point">
                       <div class="cost-block-item-line-point-value">от 1,8%</div>
-                      <div class="cost-block-item-line-point-desc">Комиссия <br>за эквайринг</div>
+                      <div class="cost-block-item-line-point-desc">Комиссия за эквайринг <br>за 1 терминал, % от торгового <br>оборота ₽/мес.</div>
                     </div>
                     <div class="cost-block-item-line-point">
                       <div class="cost-block-item-line-point-value">от 0 ₽/мес</div>
@@ -387,7 +387,7 @@
                   <div class="cost-block-item-line">
                     <div class="cost-block-item-line-point">
                       <div class="cost-block-item-line-point-value">от 1,8%</div>
-                      <div class="cost-block-item-line-point-desc">Комиссия <br>за эквайринг</div>
+                      <div class="cost-block-item-line-point-desc">Комиссия за эквайринг <br>за 1 терминал, % от торгового <br>оборота ₽/мес.</div>
                     </div>
                     <div class="cost-block-item-line-point">
                       <div class="cost-block-item-line-point-value">от 0 ₽/мес</div>
