--- a/open-api.html
+++ b/open-api.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Рублевый вклад</title>
+    <title>Open Api</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -118,7 +118,7 @@
         </ul>
       </header>
       <main>
-        <div class="ruble-deposit-page">
+        <div class="open-api-page">
           <div class="inner">
             <section class="top-banner pr50">
               <div class="top-banner-content">
@@ -134,11 +134,14 @@
                     </a>
                   </li>
                   <li class="bx-breadcrumb-item">
-                    <span>Рублевый вклад</span>
+                    <span>Open API</span>
                   </li>
                 </ul>
                 <div class="top-banner-content-text">
-                  <h1 class="top-banner-content-text-title">Исполнение желаний+</h1>
+                  <h1 class="top-banner-content-text-title">Open Api</h1>
+                  <div class="top-banner-content-text-desc">
+                    Получайте информацию по счетам из разных банков там, где это удобно. Просто объедините их в CRM, 1С или любой другой программе
+                  </div>
                   <div class="top-banner-content-text-open">
                     <a href="#">Открыть счет</a>
                   </div>
@@ -146,44 +149,90 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/ruble_deposit/top_banner_img1.png" title="Рублевый вклад" alt="Рублевый вклад">
-              </div>
-            </section>
-            <section class="features">
-              <div class="features-title">Заголовок о рублевом вкладе</div>
-              <div class="features-block">
-                <div class="features-block-item">
-                  <div class="features-block-item-image">
-                    <img src="img/ruble_deposit/features_icon1.svg" alt="">
-                  </div>
-                  <div class="features-block-item-desc">
-                    Сумма — от 10 000 до 3 млн ₽
-                  </div>
-                </div>
-                <div class="features-block-item">
-                  <div class="features-block-item-image">
-                    <img src="img/ruble_deposit/features_icon2.svg" alt="">
-                  </div>
-                  <div class="features-block-item-desc">
-                    Срок — 270 дней
-                  </div>
-                </div>
-                <div class="features-block-item">
-                  <div class="features-block-item-image">
-                    <img src="img/ruble_deposit/features_icon3.svg" alt="">
-                  </div>
-                  <div class="features-block-item-desc">
-                    Процент — 6,05% годовых
-                  </div>
-                </div>
+                <img src="img/open_api/top_banner_img1.png" title="Open Api" alt="Open Api">
               </div>
             </section>
             <section class="advantage">
-              <div class="advantage-title">Преимущества</div>
-              <ul class="list list-unstyled">
-                <li>Проценты выплачиваем в конце вклада. При досрочном закрытии выплатим 0,01% годовых</li>
-                <li>Если вам потребуется договор с подписью и печатью банка — бесплатно пришлем его по почте</li>
-              </ul>
+              <div class="advantage-block">
+                <div class="advantage-block-item">
+                  <div class="advantage-block-item-text">
+                    <div class="advantage-block-item-text-desc">
+                      Все банковские счета <br>в одном месте
+                    </div>
+                  </div>
+                  <div class="advantage-block-item-image">
+                    <img src="img/adv_img28.png" alt="Все банковские счета в одном месте">
+                  </div>
+                </div>
+                <div class="advantage-block-item">
+                  <div class="advantage-block-item-text">
+                    <div class="advantage-block-item-text-desc">
+                      Бесплатное <br>подключение
+                    </div>
+                  </div>
+                  <div class="advantage-block-item-image">
+                    <img src="img/adv_img29.png" alt="Бесплатное подключение">
+                  </div>
+                </div>
+                <div class="advantage-block-item">
+                  <div class="advantage-block-item-text">
+                    <div class="advantage-block-item-text-desc">
+                      Уведомление <br>о статусах платежей <br>и переводов
+                    </div>
+                  </div>
+                  <div class="advantage-block-item-image">
+                    <img src="img/adv_img30.png" alt="Уведомление о статусах платежей и переводов">
+                  </div>
+                </div>
+              </div>
+            </section>
+            <section class="steps">
+              <div class="steps-title">Как получить?</div>
+              <div class="steps-block">
+                <div class="steps-block-item">
+                  <div class="steps-block-item-image">
+                    <div class="steps-block-item-image-circle">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none"><circle cx="31.9902" cy="31.4551" r="30.5" fill="white" stroke="#E6E8E0"></circle><path d="M16.2383 35.8883L21.5459 33.665" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M26.1241 38.877L23.6719 43.7374" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M16 24.707L21.5454 26.8054" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.4326 27.7405L44.3688 25.54" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M36.3391 16.4404L34.0791 21.793" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M23.9697 16.5L26.5271 21.9715" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.8682 41.7949L43.5544 45.8681" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M45.3644 37.1492L29.0674 29.1621L34.4998 46.3098L45.3644 37.1492Z" stroke="#F65E64" stroke-width="2" stroke-linejoin="round"></path></svg>
+                    </div>
+                    <div class="steps-block-item-image-progress"></div>
+                  </div>
+                  <div class="steps-block-item-text">
+                    <div class="steps-block-item-text-desc">
+                      В личном кабинете в разделе <br>
+                      «Сервисы»-«Интеграция» <br>
+                      выберите «Open API»
+                    </div>
+                  </div>
+                </div>
+                <div class="steps-block-item">
+                  <div class="steps-block-item-image">
+                    <div class="steps-block-item-image-circle">
+                      <svg width="63" height="63" viewBox="0 0 63 63" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="31.7637" cy="31.2969" r="30.5" fill="white" stroke="#E6E8E0"/><path d="M16.4863 31.2969C16.4863 39.7883 23.3699 46.6719 31.8613 46.6719C37.3446 46.6719 42.1575 43.8015 44.8793 39.4813M18.7631 23.2412C21.4699 18.8494 26.3237 15.9219 31.8613 15.9219C40.3527 15.9219 47.2363 22.8055 47.2363 31.2969C47.2363 31.6353 47.2254 31.9712 47.2039 32.3042" stroke="#F65E64" stroke-width="2" stroke-linejoin="round"/><path d="M17.4473 18.4531L18.3505 23.7904L23.976 22.5884" stroke="#F65E64" stroke-width="2"/><path d="M39.3203 40.0938L45.2196 39.1486L45.7634 44.7755" stroke="#F65E64" stroke-width="2"/></svg>
+                    </div>
+                    <div class="steps-block-item-image-progress"></div>
+                  </div>
+                  <div class="steps-block-item-text">
+                    <div class="steps-block-item-text-desc">
+                      Сгенерируйте токен авторизации
+                    </div>
+                  </div>
+                </div>
+                <div class="steps-block-item">
+                  <div class="steps-block-item-image">
+                    <div class="steps-block-item-image-circle">
+                      <svg width="62" height="63" viewBox="0 0 62 63" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="31" cy="31.2969" r="30.5" fill="white" stroke="#E6E8E0"/><path d="M26 21.5L30.5 16.5L34.5 21.5" stroke="#F65E64" stroke-width="2"/><path d="M30.5 16.5V37" stroke="#F65E64" stroke-width="2"/><path d="M16.5 34V41.5C16.5 43.1569 17.8431 44.5 19.5 44.5H41C42.6569 44.5 44 43.1569 44 41.5V34" stroke="#F65E64" stroke-width="2"/></svg>
+                    </div>
+                  </div>
+                  <div class="steps-block-item-text">
+                    <div class="steps-block-item-text-desc">
+                      Полученный токен передайте <br>
+                      IT-специалисту для внесения настроек <br>
+                      в ту программу, в которую будут <br>
+                      приходить данные о ваших счетах
+                    </div>
+                  </div>
+                </div>
+              </div>
             </section>
             <section class="request">
               <div class="request-title">Откройте счет за 10 минут</div>
@@ -207,29 +256,6 @@
                   </div>
                 </div>
               </form>
-            </section>
-            <section class="important">
-              <div class="important-title">Важно знать</div>
-              <div class="important-block">
-                <div class="important-block-item">
-                  <div class="important-block-item-title">Нужен документ, подтверждающий размещение вклада. Как его получить?</div>
-                  <div class="important-block-item-desc">
-                    Получить договор размещения вклада можно, обратившись в любой удобный офис «СКБ-банка»
-                  </div>
-                </div>
-                <div class="important-block-item">
-                  <div class="important-block-item-title">Сколько вкладов я могу открыть в интернет-банке?</div>
-                  <div class="important-block-item-desc">
-                    Количество вкладов, которое можно открыть, не ограничено.
-                  </div>
-                </div>
-                <div class="important-block-item">
-                  <div class="important-block-item-title">Можно ли закрыть вклад до завершения его срока?</div>
-                  <div class="important-block-item-desc">
-                    Чтобы закрыть вклад досрочно необходимо обратиться в любой удобный офис «СКБ-банка».
-                  </div>
-                </div>
-              </div>
             </section>
           </div>
         </div>
