add multibank page
- add multibank page
- minor fixes

--- a/deposit_NOT_READY.html
+++ b/deposit_NOT_READY.html
@@ -144,7 +144,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/deposit/top_banner_img1.png" title="Онлайн Депозит" alt="Онлайн Депозит">
+                <img src="img/top_banner_deposit.png" title="Онлайн Депозит" alt="Онлайн Депозит">
               </div>
             </section>
             <section class="advantage">
