--- a/trade-acquiring.html
+++ b/trade-acquiring.html
@@ -149,7 +149,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/acquiring/top_banner_img2.png" title="Фрилансер" alt="Фрилансер">
+                <img src="img/top_banner_trade_acquiring.png" title="Торговый Эквайринг" alt="Торговый Эквайринг">
               </div>
             </section>
             <section class="advantage">
