--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/about/top_banner_img1.png" title="Онлайн-банк для предпринимателей" alt="Онлайн-банк для предпринимателей">
+                <img src="img/top_banner_about.png" title="Онлайн-банк для предпринимателей" alt="Онлайн-банк для предпринимателей">
               </div>
             </section>
             <section class="purpose">
