--- a/internet-acquiring.html
+++ b/internet-acquiring.html
@@ -149,7 +149,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/acquiring/top_banner_img3.png" title="Фрилансер" alt="Фрилансер">
+                <img src="img/top_banner_internet_acquiring.png" title="Интернет-Эквайринг" alt="Интернет-Эквайринг">
               </div>
             </section>
             <section class="advantage">
