--- a/multibank.html
+++ b/multibank.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Open Api</title>
+    <title>Мультибанк</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -118,7 +118,7 @@
         </ul>
       </header>
       <main>
-        <div class="open-api-page">
+        <div class="multibank-page">
           <div class="inner">
             <section class="top-banner pr50">
               <div class="top-banner-content">
@@ -134,13 +134,13 @@
                     </a>
                   </li>
                   <li class="bx-breadcrumb-item">
-                    <span>Open API</span>
+                    <span>Мультибанк</span>
                   </li>
                 </ul>
                 <div class="top-banner-content-text">
-                  <h1 class="top-banner-content-text-title">Open Api</h1>
+                  <h1 class="top-banner-content-text-title">Мультибанк</h1>
                   <div class="top-banner-content-text-desc">
-                    Получайте информацию по счетам из разных банков там, где это удобно. Просто объедините их в CRM, 1С или любой другой программе
+                    Сервис отображает все счета, открытые в разных банках. Контролируйте и оптимизируйте  движение ваших денег.
                   </div>
                   <div class="top-banner-content-text-open">
                     <a href="#">Открыть счет</a>
@@ -149,7 +149,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/top_banner_open_api.png" title="Open Api" alt="Open Api">
+                <img src="img/top_banner_multibank.png" title="Мультибанк" alt="Мультибанк">
               </div>
             </section>
             <section class="advantage">
@@ -177,11 +177,13 @@
                 <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
                     <div class="advantage-block-item-text-desc">
-                      Уведомление <br>о статусах платежей <br>и переводов
+                      Ежедневное <br>
+                      обновление <br>
+                      остатков
                     </div>
                   </div>
                   <div class="advantage-block-item-image">
-                    <img src="img/adv_img30.png" alt="Уведомление о статусах платежей и переводов">
+                    <img src="img/adv_img31.png" alt="Уведомление о статусах платежей и переводов">
                   </div>
                 </div>
               </div>
@@ -189,6 +191,20 @@
             <section class="steps">
               <div class="steps-title">Как получить?</div>
               <div class="steps-block">
+                <div class="steps-block-item">
+                  <div class="steps-block-item-image">
+                    <div class="steps-block-item-image-circle">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none"><circle cx="31.1289" cy="31.1104" r="31" fill="#F65E64"></circle><path d="M19 33.9404L28.5265 41.3875L45 19.4404" stroke="white" stroke-width="2" stroke-linecap="round"></path></svg>
+                    </div>
+                    <div class="steps-block-item-image-progress"></div>
+                  </div>
+                  <div class="steps-block-item-text">
+                    <div class="steps-block-item-text-desc">
+                      Откройте расчетный <br>
+                      счет в ДелоБанке
+                    </div>
+                  </div>
+                </div>
                 <div class="steps-block-item">
                   <div class="steps-block-item-image">
                     <div class="steps-block-item-image-circle">
@@ -200,35 +216,21 @@
                     <div class="steps-block-item-text-desc">
                       В личном кабинете в разделе <br>
                       «Сервисы»-«Интеграция» <br>
-                      выберите «Open API»
+                      подключите услугу «Мультибанк»
                     </div>
                   </div>
                 </div>
                 <div class="steps-block-item">
                   <div class="steps-block-item-image">
                     <div class="steps-block-item-image-circle">
-                      <svg width="63" height="63" viewBox="0 0 63 63" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="31.7637" cy="31.2969" r="30.5" fill="white" stroke="#E6E8E0"/><path d="M16.4863 31.2969C16.4863 39.7883 23.3699 46.6719 31.8613 46.6719C37.3446 46.6719 42.1575 43.8015 44.8793 39.4813M18.7631 23.2412C21.4699 18.8494 26.3237 15.9219 31.8613 15.9219C40.3527 15.9219 47.2363 22.8055 47.2363 31.2969C47.2363 31.6353 47.2254 31.9712 47.2039 32.3042" stroke="#F65E64" stroke-width="2" stroke-linejoin="round"/><path d="M17.4473 18.4531L18.3505 23.7904L23.976 22.5884" stroke="#F65E64" stroke-width="2"/><path d="M39.3203 40.0938L45.2196 39.1486L45.7634 44.7755" stroke="#F65E64" stroke-width="2"/></svg>
-                    </div>
-                    <div class="steps-block-item-image-progress"></div>
-                  </div>
-                  <div class="steps-block-item-text">
-                    <div class="steps-block-item-text-desc">
-                      Сгенерируйте токен авторизации
-                    </div>
-                  </div>
-                </div>
-                <div class="steps-block-item">
-                  <div class="steps-block-item-image">
-                    <div class="steps-block-item-image-circle">
-                      <svg width="62" height="63" viewBox="0 0 62 63" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="31" cy="31.2969" r="30.5" fill="white" stroke="#E6E8E0"/><path d="M26 21.5L30.5 16.5L34.5 21.5" stroke="#F65E64" stroke-width="2"/><path d="M30.5 16.5V37" stroke="#F65E64" stroke-width="2"/><path d="M16.5 34V41.5C16.5 43.1569 17.8431 44.5 19.5 44.5H41C42.6569 44.5 44 43.1569 44 41.5V34" stroke="#F65E64" stroke-width="2"/></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="62" height="63" viewBox="0 0 62 63" fill="none"><circle cx="31" cy="31.4551" r="30.5" fill="white" stroke="#E6E8E0"></circle><path fill-rule="evenodd" clip-rule="evenodd" d="M40 44.5833H21C20.4477 44.5833 20 44.1356 20 43.5833V17.4404C20 16.8881 20.4477 16.4404 21 16.4404H33.7855V18.8378V19.6101C33.7855 21.8193 35.5763 23.6101 37.7855 23.6101H41V43.5833C41 44.1356 40.5523 44.5833 40 44.5833ZM39.5436 21.6101L35.7855 17.7422V18.8378V19.6101C35.7855 20.7147 36.6809 21.6101 37.7855 21.6101H39.5436ZM21 46.5833H40C41.6569 46.5833 43 45.2401 43 43.5833V23.515C43 22.7343 42.6957 21.9844 42.1517 21.4244L36.2497 15.3499C35.6848 14.7685 34.9087 14.4404 34.098 14.4404H21C19.3431 14.4404 18 15.7836 18 17.4404V43.5833C18 45.2401 19.3431 46.5833 21 46.5833Z" fill="#F65E64"></path><path d="M23 26.4404H27.9167H31" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M23 31.4404H32.2188H38" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M23 36.4404H28.5312H32" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
                     </div>
                   </div>
                   <div class="steps-block-item-text">
                     <div class="steps-block-item-text-desc">
-                      Полученный токен передайте <br>
-                      IT-специалисту для внесения настроек <br>
-                      в ту программу, в которую будут <br>
-                      приходить данные о ваших счетах
+                      Отслеживайте информацию <br>
+                      обо всех ваших счетах <br>
+                      в одном месте
                     </div>
                   </div>
                 </div>
