--- a/transfer.html
+++ b/transfer.html
@@ -150,7 +150,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/transfer/top_banner_img1.png" title="Переводы" alt="Переводы">
+                <img src="img/top_banner_transfer.png" title="Переводы" alt="Переводы">
               </div>
             </section>
             <section class="advantage">
